--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using System.Globalization
 @using MyRazorApp.Pages
 @model MyRazorApp.Pages.Index
 
@@ -31,7 +32,7 @@
                     <tr>
                         <td>@category.Id</td>
                         <td>@category.Title</td>
-                        <td>@category.Price</td>
+                        <td>@category.Price.ToString("C",new CultureInfo("pt-BR"))</td>
                     </tr>
                 }
                 </tbody>
