--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,8 +1,5 @@
 @page
-@using System.Globalization
-@using MyRazorApp.Pages
-@model MyRazorApp.Pages.Index
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model Index
 
 
 <!DOCTYPE html>
