--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -2,7 +2,7 @@
 @model About
 
 @{
-    Layout = null;
+    Layout = "Shared/_LayoutDois";
 }
 
 <!DOCTYPE html>
@@ -13,7 +13,6 @@
 </head>
 <body>
 <div>
-    <partial name="Shared/_NavMenuPartial"/>
     <h1>Sobre</h1>
 </div>
 </body>
