--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,6 +1,9 @@
 @page
 @model Index
 
+@{
+    Layout = "Shared/_Layout";
+}
 
 <!DOCTYPE html>
 
@@ -11,7 +14,6 @@
 
     <body>
     <div>
-        <partial name="Shared/_NavMenuPartial"/>
         
         <h1>Categorias</h1>
 
