--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,8 +1,7 @@
 @page
 @model Index
-
 @{
-    Layout = "Shared/_Layout";
+    ViewData["Title"] = "Bem vindo";
 }
 
 <!DOCTYPE html>
@@ -14,29 +13,7 @@
 
     <body>
     <div>
-        
-        <h1>Categorias</h1>
-
-        <table>
-            <thead>
-            <tr>
-                <td>ID</td>
-                <td>Title</td>
-                <td>Price</td>
-            </tr>
-            </thead>
-
-            <tbody>
-            @foreach (var category in Model.Categories)
-            {
-                <tr>
-                    <td>@category.Id</td>
-                    <td>@category.Title</td>
-                    <td>@category.Price.ToString("C", new CultureInfo("pt-BR"))</td>
-                </tr>
-            }
-            </tbody>
-        </table>
+        <h1>Home</h1>
 
     </div>
     </body>
