--- a/Pages/Shared/_NavMenuPartial.cshtml
+++ b/Pages/Shared/_NavMenuPartial.cshtml
@@ -1,9 +1,13 @@
 ﻿<ul>
     <li>
-        <a href="~/about">Sobre</a>
+        <a asp-page="Categories">Categories</a>
     </li>
-            
+    
     <li>
-        <a href="~/login">Login</a>
+        <a asp-page="About">About</a>
+    </li>
+
+    <li>
+        <a asp-page="Login">Login</a>
     </li>
 </ul>
