--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -1,5 +1,8 @@
-﻿@page
+﻿@page "~/sobre"
 @model About
+@{
+    ViewData["Title"] = "Sobre";
+}
 
 @{
     Layout = "Shared/_LayoutDois";
@@ -14,6 +17,10 @@
 <body>
 <div>
     <h1>Sobre</h1>
+    
+    @section scripts{
+        <script src="~/js/site.js"></script>
+    }
 </div>
 </body>
 </html>
